# kaku

./: CLAUDE.md  README.ja.md  README.md  package-lock.json  package.json  roadmap.md  style-dictionary.config.js
.claude/: settings.json
docs/: PERFORMANCE_SPEC.md  PERFORMANCE_WORKFLOW.md  REFACTORING_PLAN.md
docs/specs/: search-feature.md  search-implementation-roadmap.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: backlink.rs  gallery.rs  hotkey.rs  mod.rs  note.rs  settings.rs  tag.rs  window.rs
src-tauri/src/domain/: backlink.rs  events.rs  mod.rs  note.rs  search.rs  settings.rs
src-tauri/src/infrastructure/: event_bus_impl.rs  file_repository.rs  file_settings_repository.rs  file_storage.rs  heading_filename.rs  hybrid_repository.rs  mod.rs  sqlite_index.rs
src-tauri/src/platform/: hotkey.rs  hyprland.rs  ipc.rs  manager.rs  mod.rs  tray.rs  window.rs
src-tauri/src/services/: backlink_service.rs  mod.rs  note_service.rs  search_service.rs  settings_service.rs  window_service.rs
src-tauri/src/traits/: event_bus.rs  filename_strategy.rs  mod.rs  repository.rs  settings_repository.rs  storage.rs
src/lib/: utils.ts
src/lib/components/: BacklinkPanel.svelte  CommandPalette.svelte  ConfirmDialog.svelte  Editor.svelte  ErrorBoundary.svelte  FindBar.svelte  HighlightText.svelte  HomeView.svelte  NoteCard.svelte  NotePreviewModal.svelte  SearchInput.svelte  SearchResults.svelte  SettingsModal.svelte  Sidebar.svelte  StatusBar.svelte  TagChip.svelte  TagEditDialog.svelte  TitleBar.svelte  Toast.svelte  ToastContainer.svelte  VirtualList.svelte
src/lib/editor/: setup.ts
src/lib/editor/extensions/: keymaps.ts  livePreview.ts  wikiLink.ts  wikiLinkAutocomplete.ts
src/lib/events/: eventBus.ts
src/lib/hooks/: useDebounce.ts  useListNavigation.svelte.ts
src/lib/services/: api.ts
src/lib/stores/: history.svelte.ts  home.svelte.ts  note.svelte.ts  search.svelte.ts  settings.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: errorHandler.ts  shortcuts.ts
src/routes/: +layout.svelte  +page.svelte
src/styles/: components.css  global.css  open-props.css
src/styles/themes/: light.css  tokyo-night.css
tokens/base/: animation.json  shadow.json  spacing.json  typography.json
tokens/themes/: catppuccin.json  dracula.json  gruvbox.json  kanagawa.json  monokai.json  synthwave.json  tokyo-night.json
(+1 files in other folders)
