[package]
name = "kaku"
version = "0.1.0"
description = "A fast, local-first markdown memo app"
authors = ["z"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kaku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
directories = "6"
parking_lot = "0.12"
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# Search functionality
rayon = "1.10"
memmap2 = "0.9"
regex = "1"

# SQLite index for fast metadata queries
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"

